@@ -78,7 +78,7 @@ public class RevokeMembershipMessageEvent implements Event {
             }
 
             if (client.getPlayer().getGroups().contains(groupId)) {
-                client.getPlayer().getGroups().remove(new Integer(groupId));
+                client.getPlayer().getGroups().remove(Integer.valueOf(groupId));
 
                 client.send(new GroupInformationMessageComposer(group, GameContext.getCurrent().getRoomService().getRoomData(group.getData().getRoomId()), true,
                         client.getPlayer().getId() == group.getData().getOwnerId(), group.getMembers().getAdministrators().contains(client.getPlayer().getId()),
